cmake_minimum_required (VERSION 2.6)


project (Hello)

SET(CMAKE_SYSTEM_NAME Windows)

SET(CMAKE_C_COMPILER x86_64-w64-mingw32-gcc)
SET(CMAKE_CXX_COMPILER x86_64-w64-mingw32-g++)

SET(COMPILE_FLAGS "-lglut lglu32 -lopengl32 -lglew32 -lglfw")

FIND_PACKAGE(Eigen3 REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)

ADD_DEFINITIONS(
    -DAPL=0
    -DIBM=1
    -DLIN=0
)

ADD_LIBRARY(hello_plugin SHARED
    HelloWorld.cpp
)

TARGET_LINK_LIBRARIES(hello_plugin
    /home/matt/code/HelloWorld2/SDK/Libraries/Win/XPLM_64.lib
    ${OPENGL_LIBRARIES}
    ${GLUT_LIBRARY}
    ${GLEW_LIBRARY}
)

SET_TARGET_PROPERTIES(hello_plugin
  PROPERTIES
  PREFIX ""
  SUFFIX .xpl
)

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/SDK/CHeaders/XPLM
    ${CMAKE_SOURCE_DIR}/SDK/CHeaders/Widgets
    ${EIGEN3_INCLUDE_DIR}
    ${OPENGL_INCLUDE_DIRS}
    ${GLUT_INCLUDE_DIRS}
    ${GLEW_INCLUDE_DIRS}
)


SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
